--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>best digital marketing freelancer in kerala|febin faiby</title>
+<meta name="description" content=" With over 3+ years of hands-on experience in driving customer acquisition and revenue growth through performance marketing | best digital marketing freelancer in kerala">
+<meta name="robots" content="index">
+<link rel="canonical" href="https://https://febinfaiby.netlify.app/" />
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PBNLHSGW');</script>
+  <!-- End Google Tag Manager -->
+
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -9,10 +23,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="./febinphoto.jpg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -23,9 +34,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>febinfaiby</title>
   </head>
   <body>
+    <!-- <title>best digital marketing freelancer in kerala kochi </title>
+    <title>best digital marketing strategist in kerala |febinfaiby</title>
+    <title>No 1 digital marketing strategist in kerala |febin faiby</title> -->
+    <!-- <title>best digital marketing strategist in kerala malappuram |febinfaiby</title>
+    <title>best digital marketing freelancer in kerala|febin faiby</title>
+    <title>best digital marketing freelancer in kerala calicut|febinfaiby</title> -->
+    
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PBNLHSGW"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
