--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,17 @@
     <title>best digital marketing freelancer in kerala|febin faiby</title>
 <meta name="description" content=" With over 3+ years of hands-on experience in driving customer acquisition and revenue growth through performance marketing | best digital marketing freelancer in kerala">
 <meta name="robots" content="index">
-<link rel="canonical" href="https://https://febinfaiby.netlify.app/" />
+<link rel="canonical" href="https://febinfaiby.netlify.app/" />
+<meta property="og:title" content="Best Digital Marketing Freelancer in Kerala | Febin Faiby" />
+<meta property="og:description" content="With over 3+ years of hands-on experience in driving customer acquisition and revenue growth through digital advertising |Febin faiby ." />
+<meta property="og:image" content="https://febinfaiby.netlify.app" />
+<meta property="og:url" content="https://febinfaiby.netlify.app" />
+<meta property="og:type" content="website" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Best Digital Marketing Freelancer in Kerala | Febin Faiby" />
+<meta name="twitter:description" content="Febin Faiby provides expert digital marketing services in Kerala." />
+<meta name="twitter:image" content="https://febinfaiby.netlify.app" />
+
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
