--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,19 @@
 <meta name="twitter:title" content="Best Digital Marketing Freelancer in Kerala | Febin Faiby" />
 <meta name="twitter:description" content="Febin Faiby provides expert digital marketing services in Kerala." />
 <meta name="twitter:image" content="https://febinfaiby.netlify.app" />
-
-
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Person",
+    "name": "Febin Faiby",
+    "jobTitle": "Digital Marketing Freelancer",
+    "url": "https://febinfaiby.netlify.app",
+    "sameAs": [
+      "https://www.linkedin.com/in/febinfaiby",
+      "https://twitter.com/febinfaiby"
+    ]
+  }
+</script>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
